commit: versão desktop Feita

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="nav-social">
                 <img src="svg/icon-facebook.svg" onload="SVGInject(this)">
                 <img src="svg/icon-instagram.svg" onload="SVGInject(this)">
-                <img src="svg/icon-facebook.svg" onload="SVGInject(this)">
+                <img src="svg/icon-youtube.svg" onload="SVGInject(this)">
                 <img src="svg/icon-twitter.svg" onload="SVGInject(this)">
             </div>
         </nav>
@@ -58,7 +58,7 @@
         </div>
         <div class="container-item-2">
             
-            <img src="img/spiderman.png" onload="SVGInject(this)">
+            <img src="img/spiderman.png" class="spiderman" onload="SVGInject(this)">
         </div>
     </section>
 
