--- a/index.html
+++ b/index.html
@@ -34,27 +34,40 @@
                 <img src="svg/icon-youtube.svg" onload="SVGInject(this)">
                 <img src="svg/icon-twitter.svg" onload="SVGInject(this)">
             </div>
+
+            <div class="bx mr-2">
+
+            </div>
         </nav>
     </header>
+    <!-- ===========  BG-VIDEO  =========== -->
+    <div class="bg-video">
+        <div class="video" autoplay muted loop>
+            <source src="video/spiderman.mp4" type="video/mp4">
+        </div>
+    </div>
 
     <!-- ===========  CONTAINER  =========== -->
 
     <section class="container">
         <div class="container-item-1">
-            <p>
+            <div class="px-1">
                 <img src="img/spiderman-text.png" onload="SVGInject(this)">
-            </p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, obcaecati eveniet? Ipsam facere laudantium rerum tempora ullam aliquid quis rem sapiente illum! Aliquid, iure. Excepturi nostrum enim velit quis? Eveniet!</p>
+            </div>
 
-            <p>
+            <p class="my-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, obcaecati eveniet? Ipsam facere laudantium rerum tempora ullam aliquid quis rem sapiente illum! Aliquid, iure. Excepturi nostrum enim velit quis? Eveniet!
+            </p>
+
+            <div class="my-1">
                 <a href="#" class="btn">Pre-order now</a>
-                <a href="#" class="btn-secondary">watch the teaser</a>
-            </p>
+                <a href="#" class="ml-2 btn-secondary">watch the teaser</a>
+            </div>
 
-            <p>
-                <img src="svg/ps.svg" onload="SVGInject(this)">
-                <img src="svg/marvel.svg" onload="SVGInject(this)">
-            </p>
+            <div class="flex align-items-center"> 
+                <img src="svg/ps.svg" class="w-auto" onload="SVGInject(this)">
+                <img src="svg/marvel.svg" class="ml-2 w-auto" onload="SVGInject(this)">
+            </div>
         </div>
         <div class="container-item-2">
             
